--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box2 verde">3</div>
+        <div class="box2 azul">1</div>
+        <div class="box2 rojo">2</div>
+    </div>
 </body>
 </html>
