--- a/index3.html
+++ b/index3.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+   <div class="banderas-container">
+       <div class="bandera b1">
+           <img src="assets/img/b1.png" alt="">
+       </div>
+       <div class="bandera b2">
+        <img src="assets/img/b2.png" alt="">
+    </div>
+    <div class="bandera b3">
+        <img src="assets/img/b3.png" alt="">
+    </div>
+    <div class="bandera b4">
+        <img src="assets/img/b4.png" alt="">
+    </div>
+   </div> 
 </body>
 </html>
